# covsg24_fleet_backend

./: .gitmodules  README.md
covsg24_environments/: .rmf_schedule_node.yaml  CMakeLists.txt  package.xml
covsg24_environments/environments/delta_3rd_floor/: delta_3rd_floor.building.yaml  delta_3rd_floor.project.yaml  delta_3rd_floor.rviz
covsg24_environments/environments/delta_study_rooms/: .rmf_schedule_node.yaml  delta_study_rooms.building.yaml  delta_study_rooms.project.yaml  delta_study_rooms.rviz  delta_study_rooms_dashboard_config.json  map_param.yaml
covsg24_environments/environments/delta_study_rooms_door_test/: delta_study_rooms_door_test.building.yaml  delta_study_rooms_door_test.project.yaml  delta_study_rooms_door_test_dashboard_config.json  map.yaml
covsg24_environments/environments/hospital_2nd_floor/: hospital_2nd_floor.building.yaml  hospital_2nd_floor.project.yaml  hospital_2nd_floor_dashboard_config.json  hospital_2nd_floor_lab_icu.rviz
covsg24_environments/environments/tuit_3rd_floor/: tuit_3rd_floor.building.yaml
covsg24_fleet_server/: CMakeLists.txt  package.xml
covsg24_fleet_server/launch/: common.launch.xml  fleet_in_delta_study_rooms.launch.xml  fleet_in_hospital_icu.launch.xml  jackal_adapter.launch.xml  jackal_in_delta.launch.xml  jackal_in_delta_study_rooms.launch.xml  mir100_in_delta_study_rooms.launch.xml  robotont_in_delta_study_rooms.launch.xml  robotont_in_hospital_2nd_floor.launch.xml  robotont_in_hospital_2nd_floor_real_map.launch.xml  tiago_adapter.launch.xml  tiago_in_delta.launch.xml  tiago_in_delta_study_rooms.launch.xml  tiago_in_hospital_2nd_floor_real_map.launch.xml  tiago_in_hospital_2nd_floor_real_map_with_doors.launch.xml  tiago_jackal_delta_study_rooms.launch.xml
covsg24_fleet_server/launch/fleet_adapters/: mir100_fleet_adapter.launch.xml  robot_fleet_adapter.launch.xml  robotont_fleet_adapter.launch.xml  tiago_fleet_adapter.launch.xml
covsg24_fleet_server/launch/include/: common.launch.xml  dashboard.launch.xml  dashboard_config.json  rmf_fleet.launch.xml  tb3_battery_state_msg.yaml
covsg24_fleet_server/src/: door_control_proxy.cpp
rmf/: .rmf_schedule_node.yaml
